--- a/src/components/styles/Projects.css
+++ b/src/components/styles/Projects.css
@@ -27,13 +27,13 @@ button.btn-light:hover {
   background-color: #ccc;
 }
 
-.item {
+.item_7 {
   font-size: 40px;
   color: white;
   position: absolute;
-  left: calc(200px * 5);
+  left: calc(200px * 7);
   animation-name: scrollLeft;
-  animation-duration: 30s;
+  animation-duration: 15s;
   animation-timing-function: linear;
   animation-iteration-count: infinite;
 }
@@ -44,7 +44,8 @@ button.btn-light:hover {
   }
 }
 
-.skillsWrap {
+
+.skillsWrap7 {
   max-width: fit-content;
   margin-inline: auto ;
   position: relative;
@@ -58,17 +59,73 @@ button.btn-light:hover {
 }
 
 .item1 {
-  animation-delay: -24s;
+  animation-delay: calc(15s / 7 * (7 - 1) * -1);
 }
 .item2 {
-  animation-delay:  -18s;
+  animation-delay: calc(15s / 7 * (7 - 2) * -1);
 }
 .item3 {
-  animation-delay:  -12s;
+  animation-delay: calc(15s / 7 * (7 - 3) * -1);
 }
 .item4 {
-  animation-delay:  -6s;
+  animation-delay: calc(15s / 7 * (7 - 4) * -1);
 }
 .item5 {
-  animation-delay:  0s;
+  animation-delay: calc(15s / 7 * (7 - 5) * -1);
 }
+.item6 {
+  animation-delay: calc(15s / 7 * (7 - 6) * -1);
+}
+.item7 {
+  animation-delay: calc(15s / 7 * (7 - 7) * -1);
+}
+
+.item_6 {
+  font-size: 40px;
+  color: white;
+  position: absolute;
+  left: calc(200px * 6);
+  animation-name: scrollLeft6;
+  animation-duration:16s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+@keyframes scrollLeft6 {
+  to{
+    left: -200px;
+  }
+}
+
+.skillsWrap6 {
+  max-width: fit-content;
+  margin-inline: auto ;
+  position: relative;
+  height: 40px;
+  overflow: hidden;
+  mask-image: linear-gradient(to right, 
+  rgba(0, 0, 0, 0)
+  rgba(0, 0, 0, 1) 20%,
+  rgba(0, 0, 0, 1) 80%,
+  rgba(0, 0, 0, 0));
+}
+
+.item1_6 {
+  animation-delay: calc(16s / 6 * (6 - 1) * -1);
+}
+.item2_6 {
+  animation-delay: calc(16s / 6 * (6 - 2) * -1);
+}
+.item3_6 {
+  animation-delay: calc(16s / 6 * (6 - 3) * -1);
+}
+.item4_6 {
+  animation-delay: calc(16s / 6 * (6 - 4) * -1);
+}
+.item5_6 {
+  animation-delay: calc(16s / 6 * (6 - 5) * -1);
+}
+.item6_6 {
+  animation-delay: calc(16s / 6 * (6 - 6) * -1);
+}
+
