--- a/src/components/styles/Projects.css
+++ b/src/components/styles/Projects.css
@@ -2,7 +2,7 @@
   background-color: #000;
   padding: 20px;
   border-radius: 10px;
-  max-width: 800px;
+  max-width: 900px;
   margin: 0 auto;
 }
 
@@ -11,6 +11,28 @@
   border: none;
   border-radius: 10px;
   overflow: hidden;
+}
+
+.project-details {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.9);
+  z-index: 10;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow-y: auto;
+  padding: 20px; 
+}
+
+.close-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
 }
 
 .text-white {
@@ -129,3 +151,59 @@ button.btn-light:hover {
   animation-delay: calc(21s / 6 * (6 - 6) * -1);
 }
 
+/* Media query for smaller screens */
+@media (max-width: 600px) {
+  .projects-container {
+    max-width: 100vw;
+  }
+
+  .project-card .card-text,
+
+  .theDescription {
+
+    font-size: 0.85rem !important;
+
+  }
+  .projectImg {
+    max-width: 100%;
+  }
+  #myLogo {
+    width: 75px;
+    height: auto;
+    /* display: none; */
+  }
+
+  #dark-mode-icon {
+    width: 25px;
+    height: auto;
+    /* display: none; */
+  }
+  #toggle-icon {
+    width: 30px;
+    height: auto;
+  }
+  #chemARpng{
+    display: block !important;
+  }
+  #chemARgif{
+    display: none;
+  }
+  #visionPNG{
+    display: block !important;
+  }
+  #visionGIF{
+    display: none;
+  }
+  #bublePNG{
+    display: block !important;
+  }
+  #bubleGIF{
+    display: none;
+  }
+  #clearCalSVG{
+    display: block !important;
+  }
+  #clearCalGIF{
+    display: none;
+  }
+}
