Styling for navBar

--- a/src/components/styles/MyNavBar.css
+++ b/src/components/styles/MyNavBar.css
@@ -16,6 +16,11 @@
     }
   }
 
-  #myNavbar {
-    padding: 0;
-  }
+#myNavbar {
+  padding: 0;
+  margin: 0;
+}
+
+.heightClosed {
+  height: 100px;
+}
