--- a/src/components/styles/About.css
+++ b/src/components/styles/About.css
@@ -6,11 +6,12 @@
   
   .image-popup {
     position: fixed;
-    top: 60%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0.8);
     padding: 10px;
+    padding-top: 0;
     border-radius: 10px;
     z-index: 1000;
     color: white;
@@ -19,10 +20,10 @@
   
   .close-button {
     position: absolute;
-    top: 10px;
-    right: 10px;
+    /* top: 10px; */
+    /* right: 10px; */
     background: none;
-    border: none;
+    /* border: none; */
     color: white;
     font-size: 20px;
     cursor: pointer;
@@ -30,7 +31,7 @@
     
   .image-gallery img {
     max-width: 75vw;
-    padding-top: 70px;
+    padding-top: 50px;
     border-radius: 5px;
   }
   .container{
@@ -49,4 +50,8 @@
     .image-gallery img {
       max-width: 35vw;
     }
+  }
+
+  .blurring {
+    filter: blur(4px);
   }
