--- a/src/components/styles/About.css
+++ b/src/components/styles/About.css
@@ -38,6 +38,19 @@
     width: 85%;
     margin-bottom: 50px;
     height: auto;
+    font-family: system-ui;
+    font-size: 1.25rem;
+    line-height: 1.5;
+  }
+  #aboutcontent {
+    max-width: 50rem;
+    margin-inline: auto;
+    padding-inline: 1rem;
+  }
+  
+  .section {
+    text-align: center;
+    padding-block: 2rem;
   }
 
   @media screen and (min-width: 600px) {
