--- a/src/components/styles/Home.css
+++ b/src/components/styles/Home.css
@@ -27,8 +27,9 @@
   
   .about-link {
     display: inline-block;
-    color: #007bff;
+    color: #000000;
     text-decoration: none;
+    font-size: 1.2rem;
   }
   
   .about-link:hover {
