--- a/src/components/styles/MyNavBar.css
+++ b/src/components/styles/MyNavBar.css
@@ -26,7 +26,8 @@
 }
 
 .navbar-custom {
-  padding: 1rem 0;
+  padding: 0 0;
+  margin: 0;
   transition: all 0.3s ease;
   background: transparent;
   backdrop-filter: blur(10px);
@@ -62,9 +63,11 @@
 }
 
 .logo {
-  height: 40px;
+  height: 80px;
   width: auto;
   transition: transform 0.3s ease;
+  margin:0;
+  padding: 0;
 }
 
 .logo:hover {
@@ -208,6 +211,6 @@
 
 @media (max-width: 767.98px) {
   .logo {
-    height: 35px;
+    height: 65px;
   }
 }
