Padding for home container

--- a/src/components/styles/Home.css
+++ b/src/components/styles/Home.css
@@ -221,6 +221,9 @@
 
 /* Responsive adjustments */
 @media (max-width: 991.98px) {
+  .home-container{
+    padding-left: 10%;
+  }
   .hero-content {
     padding: 1rem 0;
   }
